# rusty-arena

./: .gitignore  README.md
auth/: Cargo.toml
auth/src/: dto.rs  main.rs  models.rs
client/: Cargo.toml
client/src/: asteroids.rs  bullet.rs  camera.rs  entry.rs  game_world.rs  health_bar.rs  lib.rs  main_menu.rs  net.rs  player.rs  ui_layer.rs  world.rs
client/src/net/: async_runtime.rs  client.rs  packets.rs
common/: Cargo.toml
common/src/: asteroid.rs  bullet.rs  game_world.rs  lib.rs  packet.rs  player.rs  utils.rs
godot/: asteroid.png.import  asteroid.tscn  background.jpg.import  bullet.png.import  bullet.tscn  entry_scene.tscn  export_presets.cfg  game_scene.tscn  hello_world.gdextension  hello_world.gdextension.uid  icon.svg.import  label.tscn  main_menu.tscn  main_scene_test.tscn  player.tscn  project.godot  server.cfg  ship.png.import  test.tscn
godot/scripts/: network_client.gd  network_client.gd.uid
server/: Cargo.toml  udp_test.py
server/src/: game_state.rs  lib.rs  main.rs
