[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
common = { path = "../common" }
bincode = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
serde_json = "1.0"
bcrypt = "0.14"
jsonwebtoken = "9.0"
axum = "0.7"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }